project has been completed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="container">
  <header>
         <img  class="logo" src="spongelogo.webp" alt="logo">
     <nav>
@@ -23,7 +24,7 @@
     <h1>Spongebob Info</h1>
     <p>Here is some good spongebob characters in the spongebob squarepants Lorem ipsum dolor sit amet, consectetuer
         adipiscing elit.</p>
-    <button>Sign up</button>
+    <button class="firstbutton">Sign up</button>
     </div>
     <div class="image">
     <img src="spongebobimg.webp" class="image" alt="image">
@@ -39,16 +40,33 @@
          <img src="squidward.png" class="character" alt="">
          <p>Squidward Tentacles</p>
         </div>
-        <div class="imag"> <img src="Patrick_Star.svg.png"  class="character" alt=""></div>
-        <div class="imag"> <img src="sandy.webp" class="character" alt=""></div>
-        <div class="imag"> <img src="Mr._Krabs.svg"  class="character" alt=""></div>
+        <div class="imag"> <img src="Patrick_Star.svg.png"  class="character" alt=""> <p>Patrick Star</p> </div>
+        <div class="imag"> <img src="sandy.webp" class="character" alt=""> <p>Sandy Cheeks</p> </div>
+        <div class="imag"> <img src="Mr._Krabs.svg"  class="character" alt=""> <p>Mr Krabs</p> </div>
     </div>
-
-
-
 </div>
-
-
-
+<div class="quotes">
+    <div id="quotation">
+       <p>
+        You must not lose faith in humanity. Humanity is an ocean; if a few drops of the ocean are dirty, the ocean does not become dirty.
+       </p> 
+    </div>
+    <div id="name">
+        <h2>-Mahatma Gandhi</h2>
+    </div>
+</div>
+<div class="bx sign-up">
+    <div id="action">
+        <h3>Call to action It's time !</h3>
+        <p>Sign up for our product by clicking that button right here</p>
+    </div>
+    <div>
+        <button  type="button" class="whitebutton">Sign up</button>
+    </div>
+</div>
+<div class="footer">
+    <p>Copyright © The Odin Project 2021</p>
+</div>
+</div>
 </body>
 </html>
